# snapraid-daemon

./: .gitignore  .redocly.yaml  HISTORY  INSTALL  Makefile.am  README  configure.ac  makedist.sh  makeuncrustify.sh  rc.snapraidd.in  snapraidd.conf  snapraidd.conf.example  snapraidd.service  snapraidd.service.in  snapraidd.yaml
.github/workflows/: build.yml  codeql.yml
civetweb/: civetweb.c
daemon/: conf.c  conf.h  daemon.c  daemon.h  elem.c  elem.h  log.c  log.h  parser.c  parser.h  portable.h  report.c  report.h  rest.c  rest.h  runner.c  runner.h  scheduler.c  scheduler.h  state.c  state.h  support.c  support.h  unix.c  web.c  web.h
doc/: snapraidd.1  snapraidd.d  snapraidd.txt
tommyds/: tommy.c
